@@ -115,14 +115,10 @@ class LanguagePackRepository extends \TYPO3\CMS\Extbase\Persistence\Repository {
 			}
 		}
 		if ($success) {
-			$classCacheBuilder = $this->objectManager->get('SJBR\\StaticInfoTables\\Cache\\ClassCacheBuilder');
+			$classCacheManager = $this->objectManager->get('SJBR\\StaticInfoTables\\Cache\\ClassCacheManager');
 			$installUtility = $this->objectManager->get('TYPO3\\CMS\\Extensionmanager\\Utility\\InstallUtility');
-			$classCacheBuilder->clear();
 			$installed = \TYPO3\CMS\Core\Utility\ExtensionManagementUtility::isLoaded($languagePackExtensionKey);
 			if ($installed) {
-				$installUtility->uninstall($languagePackExtensionKey);
-				$installUtility->reloadCaches();
-				$installUtility->install($languagePackExtensionKey);
 				$content[] =  LocalizationUtility::translate('languagePack', $this->extensionName)
 					. ' ' . $languagePackExtensionKey
 					. ' ' . LocalizationUtility::translate('languagePackUpdated', $this->extensionName);
@@ -133,7 +129,7 @@ class LanguagePackRepository extends \TYPO3\CMS\Extbase\Persistence\Repository {
 					. ' ' . $languagePackExtensionKey
 					. ' ' . LocalizationUtility::translate('wasInstalled', $this->extensionName);
 			}
-			$classCacheBuilder->build();
+			$classCacheManager->reBuild();
 		}
 		return $content;
 	}
